--- a/frontend/src/app/shared/components/layout/layout.html
+++ b/frontend/src/app/shared/components/layout/layout.html
@@ -41,7 +41,7 @@
       <div class="mb-2 md:mb-0">
         <p class="text-sm text-gray-600">
           © {{ currentYear }}
-          <a href="/" class="hover:text-blue-600 underline">{{ appTitle }}</a>.
+          <a href="https://github.com/farithadnan/jejak-buku" class="hover:text-blue-600 underline">{{ appTitle }}</a>.
           All rights reserved.
         </p>
       </div>
