✏️ feat: add delete functionality to BookModal and refactor book fetching logic in BookTracker

--- a/frontend/src/app/features/book-tracker/book-tracker.component.html
+++ b/frontend/src/app/features/book-tracker/book-tracker.component.html
@@ -349,4 +349,5 @@
   [allGenres]="allGenres"
   (save)="onModalSave($event)"
   (cancel)="showModal = false"
+  (delete)="onModalDelete(editingBook)"
 ></app-book-modal>
