--- a/frontend/src/app/shared/components/layout/layout.scss
+++ b/frontend/src/app/shared/components/layout/layout.scss
@@ -17,6 +17,11 @@
   min-width: 0;
 }
 
+/* Add pointer cursor for logo */
+.logo-container button {
+  cursor: pointer;
+}
+
 header {
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
   background: #fff;
