--- a/frontend/src/app/features/book-tracker/book-tracker.component.html
+++ b/frontend/src/app/features/book-tracker/book-tracker.component.html
@@ -46,7 +46,10 @@
           </div>
           <!-- Status filter -->
           <div class="flex-1 lg:w-32 lg:flex-none">
-            <select [(ngModel)]="status" class="w-full p-2 border border-gray-300 rounded-lg text-sm bg-white cursor-pointer outline-none focus:ring-2 focus:ring-blue-500">
+            <select
+              [(ngModel)]="status"
+              (ngModelChange)="onFilterChange()"
+              class="w-full p-2 border border-gray-300 rounded-lg text-sm bg-white cursor-pointer outline-none focus:ring-2 focus:ring-blue-500">
               <option value="">All Status</option>
               <option value="planned">Planned</option>
               <option value="reading">Reading</option>
@@ -55,7 +58,10 @@
           </div>
           <!-- Genre filter -->
           <div class="flex-1 lg:w-32 lg:flex-none">
-            <select [(ngModel)]="genreFilter" class="w-full p-2 border border-gray-300 rounded-lg text-sm bg-white cursor-pointer outline-none focus:ring-2 focus:ring-blue-500">
+            <select
+              [(ngModel)]="genreFilter"
+              (ngModelChange)="onFilterChange()"
+              class="w-full p-2 border border-gray-300 rounded-lg text-sm bg-white cursor-pointer outline-none focus:ring-2 focus:ring-blue-500">
               <option value="">All Genres</option>
               <option *ngFor="let genre of allGenres" [value]="genre">{{ genre }}</option>
             </select>
